# E13VPN

./: .gitignore  README.md  index.html  package-lock.json  package.json  test-tun.bat
docs/plans/: 2026-03-21-bugfix-hardening.md  2026-03-21-tun-mode-design.md  2026-03-21-tun-mode-implementation.md  2026-03-22-ui-improvements-design.md
scripts/: get-singbox.ps1  get-wintun.ps1
src/: App.tsx  i18n.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vpn.rs
src/components/: BottomNav.tsx  ConfigList.tsx  LogsScreen.tsx  MainScreen.tsx  ModeSelector.tsx  PowerButton.tsx  RoutesScreen.tsx  SettingsScreen.tsx  SpeedDisplay.tsx  Titlebar.tsx  Toggle.tsx  VpnScreen.tsx
